made changes to prescription page
